# Custom-Meltano-Extractor

./: README.md
tap-quok/: .pre-commit-config.yaml  LICENSE  README.md  catalog.json  meltano.yml  pyproject.toml  test.db
tap-quok-sqlite/: README.md  meltano.yml  pyproject.toml
tap-quok-sqlite/.github/workflows/: test.yml
tap-quok-sqlite/tap_quok_sqlite/: __init__.py  __main__.py  client.py  tap.py
tap-quok-sqlite/tests/: __init__.py  test_core.py
tap-quok/.github/workflows/: test.yml
tap-quok/config/: config.json
tap-quok/tap_quok/: __init__.py  __main__.py  client.py  tap.py
tap-quok/tests/: __init__.py  test_core.py
